WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65085
Fix AtomicString vs. String usage in JSC binding
https://bugs.webkit.org/show_bug.cgi?id=65085
Summary
Fix AtomicString vs. String usage in JSC binding
Patrick R. Gansterer
Reported
2011-07-24 14:58:18 PDT
Fix AtomicString vs. String usage in JSC binding
Attachments
Patch
(2.33 KB, patch)
2011-07-24 15:00 PDT
,
Patrick R. Gansterer
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Patrick R. Gansterer
Comment 1
2011-07-24 15:00:57 PDT
Created
attachment 101834
[details]
Patch
Darin Adler
Comment 2
2011-07-24 17:35:50 PDT
Comment on
attachment 101834
[details]
Patch This change is great. Even better would be some way to catch such things at compile time. I’m tempted to suggest we make conversion from String to AtomicString an explicit function instead of an implicit constructor.
WebKit Review Bot
Comment 3
2011-07-24 18:27:19 PDT
Comment on
attachment 101834
[details]
Patch Clearing flags on attachment: 101834 Committed
r91652
: <
http://trac.webkit.org/changeset/91652
>
WebKit Review Bot
Comment 4
2011-07-24 18:27:23 PDT
All reviewed patches have been landed. Closing bug.
Patrick R. Gansterer
Comment 5
2011-07-24 20:50:15 PDT
(In reply to
comment #2
)
> (From update of
attachment 101834
[details]
) > This change is great. Even better would be some way to catch such things at compile time. I’m tempted to suggest we make conversion from String to AtomicString an explicit function instead of an implicit constructor.
I'm working on making the AtomicString(String) constructor explicit, but there are tooooo many errors at the moment.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug