Fix AtomicString vs. String usage in JSC binding https://bugs.webkit.org/show_bug.cgi?id=65085

Reviewed by Darin Adler.

Use ustringToAtomicString instead of ustringToString where appropriate.

* bindings/js/JSHTMLAllCollectionCustom.cpp:
* bindings/js/JSHTMLCollectionCustom.cpp:


Canonical link: https://commits.webkit.org/80830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91652 268f45cc-cd09-0410-ab3c-d52691b4dbfc